--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <title>Ploaut</title>
     </head>
     <body>
+        <div id = "login-form">
+            <input type = "text" placeholder = "what is your name?"/>
+            <button>log in</button>
+        </div>
+       
         <script src="app.js"></script>
-        <h1>HELLO,This is an experimental website</h1>
-        <p> 여기는 내 HTML 문서와 CSS,Javascript 를 실험하는 공간이야</p>
+
     </body>
     </html>
