--- a/homework.html
+++ b/homework.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=divice-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="style.css">
-        <title>Ploaut</title>
+        <title>homework</title>
     </head>
     <body>
         <script src="homework.js"></script>
